test/lattests/extensions/objects1/bad/fieldAndMethodOfTheSameName.lat
class a {
    int foo;

    boolean foo(int x) { return true; }
}

int main() { return 0; }